Bug 1595645 - Add support for characters with CLASS_CLOSE_LIKE_CHARACTER missed in implementation of word-break:break-all. r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D52674